feat: add AUH credit line configuration

--- a/app/components/ui/RotatingStats.module.css
+++ b/app/components/ui/RotatingStats.module.css
@@ -1,4 +1,6 @@
 .carousel {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   position: relative;
   width: 320px;
   height: 220px;
@@ -94,3 +96,4 @@
   align-items: center;
   justify-content: center;
 }
+
